--- a/src/components/topbar/topbar.css
+++ b/src/components/topbar/topbar.css
@@ -6,8 +6,9 @@
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.03));
   display: flex;
   justify-content: space-between;
-  padding: 0px 40px 0 40px;
+  padding: 0px 35px 0 35px;
   align-items: center;
+  margin-bottom: 10px;
 }
 .left-tb > p {
   color: #231f20;
@@ -52,7 +53,7 @@
   align-items: center;
 }
 .right-tb > button {
-    margin-right: 1rem;
+    margin-right: 1.3rem;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -72,5 +73,5 @@
     margin-right: 5px;
 }
 .notification-btn{
-    margin-right: 1rem;
+    margin-right: 1.3rem;
 }
