--- a/src/components/mainContent/mainContent.css
+++ b/src/components/mainContent/mainContent.css
@@ -5,3 +5,9 @@
     align-items: center;
     flex-direction: column;
 }
+.data-records{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 98%;
+}
